# qaztribber2.0

./: .firebaserc  .gitignore  ARCHITECTURE_RU.md  CLAUDE.md  IMPLEMENTATION_PLAN_RU.md  QazTriber.command  README_RU.md  firestore.indexes.json  firestore.rules  package-lock.json  package.json  run_local.sh
.github/workflows/: pages.yml  release.yml
admin-panel/: README.md
admin-panel/server/: .env.example  package-lock.json  package.json  tsconfig.json
admin-panel/server/src/: auth.ts  config.ts  firebase.ts  index.ts  telegram-bot.ts  userService.ts  whitelistService.ts
admin-panel/web/: app.js  google.html  index.html  style.css
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
backend/tests/: test_audio.py  test_cancellable_downloads.py  test_download_resume.py  test_error_codes.py  test_jobs.py  test_logging.py  test_model_storage.py  test_sessions_endpoint.py  test_stages.py
docs/: AUTH_SKILLS.md  MOBILE_AUTH_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Logo.tsx  api.ts  i18n.ts  icons.tsx  notifications.ts  storage.ts  store.tsx  styles.css
frontend/src/lib/: auth.tsx  (+1 more)
functions/: firestore.rules  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
landing/: index.html
packaging/: QazTriber.iss  build_release.py  launcher.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  rasterize.js
src-tauri/src/: lib.rs  main.rs
(+31 files in other folders)
