[package]
name = "qaztriber"
version = "1.0.0"
description = "QazTriber — локальная расшифровка совещаний"
authors = ["QazTriber"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "qaztriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
